<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminComActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/txtSaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_black"
            android:padding="15dp"
            android:text="@string/saludo"
            android:textAlignment="center"
            android:textColor="@color/azul_primario"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:paddingBottom="16dp"
            android:text="@string/opciones"
            android:textAlignment="center"
            android:textSize="19sp" />

        <Button
            android:id="@+id/btnVerComunicados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/rosa_primario"
            android:padding="14dp"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="verCom"
            android:text="@string/ver_comunicados" />

        <Button
            android:id="@+id/btnPublicarCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/rosa_primario"
            android:padding="14dp"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="publCom"
            android:text="@string/publicar_comunicados" />

        <Button
            android:id="@+id/btnMisComunicados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/rosa_primario"
            android:padding="14dp"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="miCom"
            android:text="@string/mis_comunicados" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>